--- a/index.html
+++ b/index.html
@@ -390,60 +390,60 @@
                     <div class="row align-items-center wow fadeInUp">
                         <div class="col-lg-5 offset-lg-7">
                             <h5 class="uptitle">Favorite</h5>
-                            <h2>Drinks</h2>
+                            <h2>Hookah's</h2>
 
                             <div class="menu-item thead">
                                 <div class="c1"></div>
-                                <div class="c2">Medium<span>16 oz</span></div>
-                                <div class="c3">Large<span>20 oz</span></div>
+                                <div class="c2"><span></span></div>
+                                <div class="c3">Price<span></span></div>
                             </div>
 
 
                             <div class="menu-item">
-                                <div class="c1">Espresso<span>Espresso, where passion meets perfection.</span></div>
-                                <div class="c2">1.75</div>
-                                <div class="c3">2.20</div>
+                                <div class="c1">RUBI KISS<span>BLUEBERRY,STRAWBERRY & WATERMELON (RED DRAGON BASE)</span></div>
+                                <div class="c2"></div>
+                                <div class="c3">₹2199</div>
                             </div>
 
 
                             <div class="menu-item">
-                                <div class="c1">Mocchiato<span>The perfect harmony of espresso and sweetness</span></div>
-                                <div class="c2">1.94</div>
-                                <div class="c3">2.25</div>
+                                <div class="c1">BRAIN COOLER<span>BRAIN FREEZE UP & MINT & GUM (RED BULL BASE)</span></div>
+                                <div class="c2"></div>
+                                <div class="c3">₹2199</div>
                             </div>
 
                             <div class="menu-item">
-                                <div class="c1">Classic Cappucino<span>A timeless delight brewed just for you.</span></div>
-                                <div class="c2">2.90</div>
-                                <div class="c3">3.90</div>
-                            </div>
-
-
-                            <div class="menu-item">
-                                <div class="c1">Cappucino<span>Where rich espresso meets frothy perfection.</span></div>
-                                <div class="c2">3.15</div>
-                                <div class="c3">4.15</div>
+                                <div class="c1">MOUTH WATRING PAAN<span>BRAIN FREEZE UP & MINT & GUM (RED BULL BASE)</span></div>
+                                <div class="c2"></div>
+                                <div class="c3">₹2199</div>
                             </div>
 
 
                             <div class="menu-item">
-                                <div class="c1">Mocha latte<span>The perfect blend of chocolate and espresso.</span></div>
-                                <div class="c2">3.45</div>
-                                <div class="c3">4.35</div>
+                                <div class="c1">FRUITS KING<span>MANGO & GRAPE & PEACH & STEARWERY (BLUE LOGAN BASE)</span></div>
+                                <div class="c2"></div>
+                                <div class="c3">₹2199</div>
                             </div>
 
 
                             <div class="menu-item">
-                                <div class="c1">Caramel late<span>Where smooth espresso meets golden caramel bliss.</span></div>
-                                <div class="c2">3.45</div>
-                                <div class="c3">4.35</div>
+                                <div class="c1">PAN MASTI,MITHA PAN & GULABI PAN<span></span></div>
+                                <div class="c2"></div>
+                                <div class="c3">₹699</div>
                             </div>
 
 
                             <div class="menu-item">
-                                <div class="c1">Cafe americano<span>The essence of pure coffee bliss.</span></div>
-                                <div class="c2">2.25</div>
-                                <div class="c3">3.50</div>
+                                <div class="c1">GUM & CARDAMOM & SUPARI<span></span></div>
+                                <div class="c2"></div>
+                                <div class="c3">₹699</div>
+                            </div>
+
+
+                            <div class="menu-item">
+                                <div class="c1">BLUEBERRY & STRAWBERRY & WATERMELON<span></span></div>
+                                <div class="c2"></div>
+                                <div class="c3">₹699</div>
                             </div>
 
                             <div class="spacer-single"></div>
@@ -463,60 +463,60 @@
                     <div class="row align-items-center wow fadeInUp">
                         <div class="col-lg-5">
                             <h5 class="uptitle">Favorite</h5>
-                            <h2>Foods</h2>
+                            <h2>Foods & Beverages</h2>
 
                             <div class="menu-item">
-                                <div class="c1">Plain bread<span>Soft and golden with a tantalizing aroma</span></div>
+                                <div class="c1">HUMBURGER Special Coffee<span>[Choco+Oreo+Ice Cream]</span></div>
                                 <div class="c2"></div>
-                                <div class="c3">2.75</div>
+                                <div class="c3">₹119</div>
                             </div>
 
 
                             <div class="menu-item">
-                                <div class="c1">Milk bread<span>Infused with the richness of milk</span></div>
+                                <div class="c1">Oreo Cold Coffee<span></span></div>
                                 <div class="c2"></div>
-                                <div class="c3">2.75</div>
+                                <div class="c3">₹149</div>
                             </div>
 
 
                             <div class="menu-item">
-                                <div class="c1">Sandwich bread<span>Classic combinations like ham and cheese</span></div>
+                                <div class="c1">Wonderfilled Oreo Shake<span></span></div>
                                 <div class="c2"></div>
-                                <div class="c3">2.75</div>
+                                <div class="c3">₹169</div>
                             </div>
 
 
                             <div class="menu-item">
-                                <div class="c1">Brown bread<span>Crafted from whole grain flour</span></div>
+                                <div class="c1">Brittany Strawberry Shake<span></span></div>
                                 <div class="c2"></div>
-                                <div class="c3">2.75</div>
+                                <div class="c3">₹159</div>
                             </div>
 
 
                             <div class="menu-item">
-                                <div class="c1">Garlic bread<span>Infused with aromatic garlic and rich butter</span></div>
+                                <div class="c1">Burman Mango Shake<span></span></div>
                                 <div class="c2"></div>
-                                <div class="c3">2.75</div>
+                                <div class="c3">₹159</div>
                             </div>
 
 
                             <div class="menu-item">
-                                <div class="c1">Wheat bread<span>With hearty texture and nutty flavor</span></div>
+                                <div class="c1">Blue Mississipi Cooler<span></span></div>
                                 <div class="c2"></div>
-                                <div class="c3">2.75</div>
+                                <div class="c3">₹129</div>
                             </div>
 
 
                             <div class="menu-item">
-                                <div class="c1">Bannana bread<span>With its banana taste and delightful aroma</span></div>
+                                <div class="c1">Chunky Dark Fantasy<span></span></div>
                                 <div class="c2"></div>
-                                <div class="c3">2.75</div>
+                                <div class="c3">₹179</div>
                             </div>
 
                             <div class="menu-item">
-                                <div class="c1">Burger bun<span>With fluffy texture and subtle sweetness</span></div>
+                                <div class="c1">Cuban Mojito<span></span></div>
                                 <div class="c2"></div>
-                                <div class="c3">2.75</div>
+                                <div class="c3">₹139</div>
                             </div>
 
                             <div class="spacer-single"></div>
