--- a/03_luxury-contact.html
+++ b/03_luxury-contact.html
@@ -106,8 +106,8 @@
                         </div>
 
                         <div class="col-lg-8">
-                            <form name="contactForm" id="contact_form" class="position-relative z1000" method="post"
-                                action="#">
+                            <form name="contact-form" id="contact_form" class="position-relative z1000" method="post"
+                                action="https://script.google.com/macros/s/AKfycbxmYa3Lzp2Mxmkrnpjzmci3LjmHhQK709gU_3Wq2ANFF7LRQbYQo0BomgRJw8dl9WER/exec">
                                 <div class="row gx-4">
                                     <div class="col-lg-6 col-md-6 mb10">
                                         <div class="field-set">
@@ -139,7 +139,7 @@
                                 <div id='submit' class="mt20">
                                     <input type='submit' id='send_message' value='Send Message' class="btn-custom">
                                 </div>
-
+                                <script src="contact-sheet.js"></script>
                                 <div id="success_message" class='success'>
                                     Your message has been sent successfully. Refresh this page if you want to send more
                                     messages.
@@ -147,6 +147,8 @@
                                 <div id="error_message" class='error'>
                                     Sorry there was an error sending your form.
                                 </div>
+
+                                
                             </form>
 
                         </div>
