whatsapp icon added

--- a/03_luxury-booking.html
+++ b/03_luxury-booking.html
@@ -222,6 +222,11 @@
                     </div>
                 </div>
             </section>
+            <div>
+                <a class="whtsapp" href="https://wa.me/+917980795046" target="_blank" rel="noopener noreferrer">
+                    <img class="whatsappimg" src="images/whatsapp.svg" alt="WhatsApp icon"><br>
+                  </a>
+            </div>
 
         </div>
 
