--- a/03_luxury-menu.html
+++ b/03_luxury-menu.html
@@ -164,7 +164,7 @@
 
                                 </div>
                             </div>
-
+                           
                             <h5 class="uptitle">MAKE YOUR OWN (CHOICE TRIPLE FLAVOURS) <br>@ ₹699/-</h5>
 
                             <div class="spacer-half"></div>
@@ -502,7 +502,7 @@
                                 <div class="c2"></div>
                                 <div class="c3">₹229.00</div>
                             </div>
-
+                          
 
 
 
@@ -562,7 +562,11 @@
                         </div>
                     </div>
                 </div>
-
+                <div>
+                    <a class="whtsapp" href="https://wa.me/+917980795046" target="_blank" rel="noopener noreferrer">
+                        <img class="whatsappimg" src="images/whatsapp.svg" alt="WhatsApp icon"><br>
+                      </a>
+                </div>
                 <div class="image-container col-lg-6 h-100 top-0 jarallax" data-speed="-.2">
                     <img src="03_images/background/bg-side-2.jpg" class="jarallax-img" alt="">
                 </div>
