--- a/index.html
+++ b/index.html
@@ -649,20 +649,20 @@
                         </div>
                         <div class="col-lg-4 wow fadeInRight" data-wow-delay="0s">
                             <div class="text-center">
-                                <span class="id-color-2 bold">Mon - Thu</span>
-                                <div class="fs20">10:30AM - 9:30PM</div>
+                                <span class="id-color-2 bold"></span>
+                                <div class="fs20"></div>
                             </div>
                         </div>
                         <div class="col-lg-4 wow fadeInRight" data-wow-delay=".1s">
                             <div class="text-center">
-                                <span class="id-color-2 bold">Friday</span>
-                                <div class="fs20">10:00AM - 10:30PM</div>
+                                <span class="id-color-2 bold" style="font-size: 33px;">All Day</span><br><br>
+                                <div class="fs20" style="font-size: 33px;">12:00 Noon - 11:00 PM</div>
                             </div>
                         </div>
                         <div class="col-lg-4 wow fadeInRight" data-wow-delay=".2s">
                             <div class="text-center">
-                                <span class="id-color-2 bold">Sat - Sun</span>
-                                <div class="fs20">09:30AM - 11:00PM</div>
+                                <span class="id-color-2 bold"></span>
+                                <div class="fs20"></div>
                             </div>
                         </div>
                     </div>
@@ -670,7 +670,11 @@
             </section>
 
         </div>
-
+        <div>
+            <a class="whtsapp" href="https://wa.me/+917980795046" target="_blank" rel="noopener noreferrer">
+                <img class="whatsappimg" src="images/whatsapp.svg" alt="WhatsApp icon"><br>
+              </a>
+        </div>
 
         <!-- footer begin -->
         <footer>
