--- a/03_luxury-blog.html
+++ b/03_luxury-blog.html
@@ -214,6 +214,11 @@
                         </div>
                     </div>
                 </div>
+                <div>
+                    <a class="whtsapp" href="https://wa.me/+917980795046" target="_blank" rel="noopener noreferrer">
+                        <img class="whatsappimg" src="images/whatsapp.svg" alt="WhatsApp icon"><br>
+                      </a>
+                </div>
             </section>
 
 
