--- a/03_luxury-gallery.html
+++ b/03_luxury-gallery.html
@@ -98,13 +98,13 @@
 
                         <div class="col-lg-4 item">
                             <figure class="hover-zoom position-relative overflow-hidden">
-                                <a href="images/gallery/1.jpg">
+                                <a href="images/gallery/1.png">
                                     <span class="d-hover">
                                         <span class="d-text">
                                             <span class="d-cap">View</span>
                                         </span>
                                     </span>
-                                    <img src="03_images/gallery/1.jpg" alt="">
+                                    <img src="03_images/gallery/1.png" alt="">
                                 </a>
                             </figure>
                         </div>
